--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "concurrently 'cd genie-client && yarn run start' 'cd genie-server && yarn run start'",
-    "init": "concurrently 'cd genie-client && yarn install' 'cd genie-server && yarn install'"
+    "dev": "concurrently \"cd genie-client && yarn run start\" \"cd genie-server && yarn run start\"",
+    "init": "concurrently \"cd genie-client && yarn install\" \"cd genie-server && yarn install\""
   },
   "dependencies": {
     "concurrently": "^5.3.0"
