--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "init": "concurrently \"cd genie-client && yarn install\" \"cd genie-server && yarn install\""
   },
   "dependencies": {
+    "@material-ui/icons": "^4.9.1",
     "concurrently": "^5.3.0"
   }
 }
