--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "google-spreadsheet": "^3.0.11",
     "http-errors": "~1.6.3",
+    "mongodb": "^3.6.2",
     "mongoose": "^5.10.5",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
